SEA-188: fix GHG tag getting cut off at certain breakpoints

--- a/angular/src/app/energy-efficiency/energy-efficiency-results/energy-efficiency-recommendation-card/energy-efficiency-recommendation-card.component.scss
+++ b/angular/src/app/energy-efficiency/energy-efficiency-results/energy-efficiency-recommendation-card/energy-efficiency-recommendation-card.component.scss
@@ -397,10 +397,6 @@ $icon-column-width: $add-to-plan-column-width;
           border-bottom: 2px solid #f5f5f5;
         }
       }
-
-      .tag {
-        @include is-grid-item($number-of-items: 3, $margin: 20px);
-      }
     }
   }
 
